# serverless.rs

./: CLAUDE.md  IMPLEMENTATION.md  LICENSE  README.md
ai_specs/: EXECUTION_PLAN.md  LAMBDA_PLAN.md  PROJECT_PRD.md
serverless_rs/: Cargo.toml
serverless_rs/examples/self_documentation/: main.rs
serverless_rs/examples/simple/: main.rs
serverless_rs/macros/: Cargo.toml
serverless_rs/macros/src/: lib.rs
serverless_rs/macros/tests/: 01-basic-handler.rs  02-with-route.rs  03-with-requirements.rs  macro_tests.rs
serverless_rs/src/: context.rs  error.rs  handler.rs  info.rs  lib.rs  request.rs  requirements.rs  response.rs  router.rs
serverless_rs/tests/: macro_tests.rs
