[package]
name = "serverless_rs_macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for serverless.rs"
authors = ["serverless.rs Team"]
license = "MIT"
repository = "https://github.com/serverless-rs/serverless-rs"
documentation = "https://docs.rs/serverless_rs_macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
regex = "1.10.2"

[dev-dependencies]
serverless_rs = { path = ".." }